@@ -13,6 +13,11 @@ Houdini version is 17.0.
 </BLOCKQUOTE>
 
 @par
+New features:
+- Added @vdblink{tree::Tree::nodeCount,Tree::nodeCount}, which counts
+  the number and type of nodes in a tree very efficiently.
+
+@par
 Improvements:
 - The minimum ABI for OpenVDB is now always enforced through CMake
   separately from other minimum dependency version variables.
